Minor bugfixes, version jump

--- a/homepage/style.css
+++ b/homepage/style.css
@@ -143,7 +143,7 @@ html {
     width: 100%;
     height: 50px;
     line-height: 50px;
-    transition: 200ms;
+    transition: 100ms;
     color: white;
 }
 
